--- a/components.json
+++ b/components.json
@@ -5,13 +5,13 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "src/App.css",
+    "css": "src/index.css",
     "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
-    "components": "src/shadcnComponents",
-    "utils": "src/lib/utils"
+    "components": "src//molecules/core/design-system",
+    "utils": "src/molecules/core/lib/utils"
   }
 }
